--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,19 +1,36 @@
-input {
-	beats {
-		port => 5044
-	}
 
-	tcp {
-		port => 50000
+input {
+  beats {
+    port => 5044
+	type => "apache"
+  }
+  beats {
+    port => 6044
+	type => "wso2"
+  }
+}
+
+filter {
+	grok {
+		match => { "message" => "%{COMBINEDAPACHELOG}" }
 	}
 }
 
-## Add your filters / logstash plugins configuration here
-
 output {
-	elasticsearch {
-		hosts => "elasticsearch:9200"
-		user => "logstash_internal"
-		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+	if [type] == "apache" {
+		elasticsearch {
+			hosts => "elasticsearch:9200"
+			user => "logstash_internal"
+			password => "${LOGSTASH_INTERNAL_PASSWORD}"
+			index => "logstash-siaf-apache-prod-%{+YYYY.MM.dd}"
+		}
+	}
+	if [type] == "wso2" {
+		elasticsearch {
+			hosts => "elasticsearch:9200"
+			user => "logstash_internal"
+			password => "${LOGSTASH_INTERNAL_PASSWORD}"
+			index => "logstash-siaf-wso2-prod-%{+YYYY.MM.dd}"
+		}
 	}
 }
